added wrapper div w/  div child circle class containing lorem text, + initial styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="wrapper">
+        <div class="circle"></div>
+        <h1>Text-Wrap-Around-Circle-Image-CSS3</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+           Reprehenderit asperiores dolores tempora a quis ipsa incidunt
+           doloribus delectus vero et, laudantium harum reiciendis impedit
+           quibusdam, eos quod suscipit quisquam alias consequuntur, corporis
+           est sit non inventore beatae. Quod quam quaerat, asperiores perspiciatis
+           suscipit ab quas enim non expedita consequatur repudiandae?</p>
+    </div>
 </body>
 </html>
