--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
         <div class="circle"></div>
-        <h1>Text-Wrap-Around-Circle-Image-CSS3</h1>
+        <h1>Text Wrap Circle Image</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
            Reprehenderit asperiores dolores tempora a quis ipsa incidunt
            doloribus delectus vero et, laudantium harum reiciendis impedit
